Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75388

Windows Crash QTabBar->setCurrentIndex() - tabstop

XMLWordPrintable

    • All
    • a7cbb8c639487edbabc08ea99498503b33c9f6d6 (qt/qtbase/5.12)

      When a QTabBar is placed, but the widget is the last in the tabstop list, calling QTabBar->setCurrentIndex() causes the application to crash.

      This happens on Windows - tried with QT5.11, 5.9 and 5.12.3.  Also tried with MinGW64 and MSVC2015.

      This does not happen on Linux.

      To re-create, build each of the two examples in the attached tar file.  Manually click on the first lineedit on the first tab, and then select 'Second Tab, Second Item' from the menu.

      The file called 'First' will work, and the file called 'Last' will freeze.

      The only difference is the tabstop section in mainwindow.ui.

       

        1. Tabstop.tar
          30 kB
        2. qwidget_debug.diff
          3 kB
        For Gerrit Dashboard: QTBUG-75388
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            stevecl Steve C
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes